# PyFerret

./: .dir-locals.el  .gitignore  Makefile  README.md  README_build_ferret  README_build_pyferret_mac.txt  README_ferret_mac_homebrew.md  README_pyferret_mac_homebrew.md  README_pyferret_mac_homebrew.txt  copy_dylibs.sh  eofanalysis.py  eofanalysistests.py  ferret.jnl  ferret.jnl.~1~  ferret.jnl.~2~  ferret.jnl.~3~  ferret.jnl.~4~  ferret.jnl.~5~  ferret.py  ferret7  ferretmagic.py  gcircle.py  mk  platform_specific.mk.aix  platform_specific.mk.alpha  platform_specific.mk.i386-apple-darwin  platform_specific.mk.i386-linux  platform_specific.mk.i386-linux-gnu  platform_specific.mk.i386-linux.gfdl  platform_specific.mk.i486-linux  platform_specific.mk.i586  platform_specific.mk.ia64-sles10  platform_specific.mk.ia64-sles9  platform_specific.mk.intel-mac  platform_specific.mk.intel-mac-ifort  platform_specific.mk.iris4d  platform_specific.mk.macintosh  platform_specific.mk.ppc64  platform_specific.mk.solaris  platform_specific.mk.solaris8  (+16 more)
xgks/: COPYRIGHT  CUSTOMIZE  CUSTOMIZE.alpha  CUSTOMIZE.i386-apple-darwin  CUSTOMIZE.i386-linux  CUSTOMIZE.i486-linux  CUSTOMIZE.i586  CUSTOMIZE.ia64-linux  CUSTOMIZE.intel-mac  CUSTOMIZE.linux  CUSTOMIZE.macintosh  CUSTOMIZE.ppc64  CUSTOMIZE.solaris  CUSTOMIZE.x86_64-linux  HISTORY  INSTALL  MANIFEST  Makefile  Makefile.in  ORIGIN  README  config.status  configure  configure.in
xgks/doc/: Makefile  Makefile.in  xgks.3src1  xgks.3src2
xgks/fontdb/: B.src  G.src  I.src  Makefile  Makefile.in  R.src  SC.src  b.src  depend  i.src  mkfont.c  r.src  sc.src
xgks/port/: COPYRIGHT  CUSTOMIZE  HISTORY  Makefile  Makefile.in  aclocal.m4  atexit.c  config.c  configure.in  depend  fortc.fc  fortc.h  master.mk  master.mk.in  sigaddset.c  (+14 more)
(+7830 files in other folders)
